# BIA

./: .gitignore  AntColony.cpp  AntColony.h  CMakeLists.txt  DumpPermutations.h  FireflySolver.cpp  FireflySolver.h  Individual.h  PSOSolver.cpp  PSOSolver.h  Problem.h  SOMASolver.cpp  SOMASolver.h  Solver.cpp  Solver.h  TLBOSolver.cpp  TLBOSolver.h  main.cpp  nsga2_solver.cpp  nsga2_solver.h  optimalization_functions.cpp  optimalization_functions.h  optimalization_functions_vis.cpp  optimalization_functions_vis.h  optimalization_functions_viz.cpp  search_algorithms.cpp  search_algorithms.h  tsp.cpp  tsp.h
